# ITK_academy_FastAPI_test_task

./: .dockerignore  .env-sample  Dockerfile  README.md  docker-compose-tests.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: main.py
app/models/: item.py
tests/: __init__.py  conftest.py  file_parser.py  item_tests.py
tests/fixtures/: item_data_to_create.json  item_data_to_update.json
