[project]
name = "itk-academy-fastapi-test-task"
version = "0.1.0"
description = "Test task"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.119.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "uvicorn>=0.37.0",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "pytest>=8.4.2",
]
